# google_scraper

./: LICENSE  README.md  pyproject.toml
gscraper_env/: pyvenv.cfg
src/google_scraper/: __init__.py  __main__.py  google_scraper.py
