[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google_scraper"
version = "0.0.1"
authors = [
  { name="agile-enigma", email="author@example.com" },
]
description = "A Python module and command-line utility which scrapes google search results and associated metadata"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "beautifulsoup4 ~= 4.12.3 ",
    "pandas         ~= 2.2.1",
    "requests       ~= 2.31.0",
    "langdetect     ~= 1.0.9",
    "pytz           ~= 2024.1",
    "selenium       ~= 4.20.0",
    "openpyxl       ~= 3.1.2"
]

[project.urls]
"Homepage" = "https://github.com/agile-enigma/google_scraper"
"Bug Tracker" = "https://github.com/agile-enigma/urlFormatter/issues"
